<resources>
    <string name="app_name">Biblioteca Virtual de Projetos Integradores</string>
    <string name="label">valor</string>
    <string name="sobre">Sobre</string>
    <string name="favoritos">Favoritos</string>
    <string name="config">Configurações</string>
    <string name="ajuda">Ajuda</string>
    <string name="leia">Leia</string>
    <string name="aceito">Aceito as condições</string>
    <string name="termos">
        <strong>BIBLIOTECA VIRTUAL DE PROJETOS INTEGRADORES</strong>\n\n\n
        Este aplicativo é uma base de dados de Projetos Integradores, realizados por alunos da UNIVESP - Universidade Virtual do Estado de São Paulo, dos cursos de Engenharia de Computação, Engenharia de Produção, Licenciaturas em Biologia, Física, Matemática, Química e Pedagogia.\n\n
        Aplicam-se as normas vigentes de direitos autorais aos conteúdos. Seu uso é autorizado, quando realizada a devida referenciação bibliográfica.\n\n
        Ao continuar, o usuário concorda com estes termos de uso.
    </string>
    <string name="texto_insercao">
        Para inserir um Projeto Integrador, clique no botão abaixo.\n
        É preciso estar conectado a uma conta da UNIVESP. Caso não esteja conectado, clique no botão de login de conta, e depois retorne a este aplicativo e clique no botão de inserção.
    </string>
    <string name="account_chooser">Login em conta da UNIVESP</string>
    <string name="form_inser">FORMULÁRIO DE INSERÇÃO</string>
    <string name="opcoes">opções de pesquisa</string>
    <string name="PI">Projeto Integrador</string>
    <string name='id'>1xB8bznVGDV4FqOI-XdlO9M4XBsNIaXdrBtZ0zvI2XPc</string>
    <string name='id2'>1b82oYAsm9DoYABSEjJwKJTfmqvdm9tsuhDpjfOiHLOk</string>
    <string name='send_to'>Compartilhar Projeto</string>
    <string name="inf">Este aplicativo foi desenvolvido pelo grupo SM1 - Polo São José dos Campos - UNIVESP\n
    Universidade Virtual do Estado de São Paulo\n
    Seu uso é livre, e seu conteúdo é regido pelas normas de software livre:\n
    GNU General Public License (GPL) version 3\n
    O código do projeto está disponível em:</string>
    <string name="contato">milton.atarassi@aluno.univesp.br</string>
    <string name="contato2">everson.abreu@aluno.univesp.br</string>
    <string name="git">https://github.com/Milton-Atarassi/Biblioteca_Virtual_de_Projetos_Integradores</string>
    <string name="text">A biblioteca também pode ser acessada pelo computador no endereço:</string>
    <string name="link_web">https://sites.google.com/view/biblioteca-virtual-univesp</string>
    <string name="ajuda_texto">Para obter informações de como utilizar este aplicativo, acesse o documento com dicas no link abaixo:</string>
    <string name="link_ajuda">https://drive.google.com/file/d/1MZz6SguQoeQRBZlCNV4NUwqF1bmPGmZq/view?usp=sharing</string>


</resources>
